<resources>
    <string name="app_name">FirebaseApp</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_phone">Number Phone</string>
    <string name="prompt_provider">Provider</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_up_google">Sign up with Google</string>
    <string name="action_sign_in_google">Sign in with Google</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_logout">Log out</string>
    <string name="action_login">Login</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Empty Username</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="content_description_favorite">turn mode theme</string>
    <string name="switch_mode">turn mode theme</string>
    <string name="error_event">ERROR</string>
    <string name="info_event">INFO</string>
    <string name="description">description</string>
</resources>